--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -22,6 +22,8 @@
         <ul>
           <li><a href="{% url 'cat_index' %}">All Cats</a></li>
           <li><a href="{% url 'cat_create' %}">Add a Cat</a></li>
+          <li><a href="{% url 'toy_index' %}">All Toys</a></li>
+          <li><a href="{% url 'toy_create' %}">Add a Toy</a></li>
           <li><a href="{% url 'about' %}">About</a></li>
         </ul>
       </nav>
